--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -1284,8 +1284,12 @@
       <div class="import-card">
         <i class="fab fa-linkedin"></i>
         <h3>Import from LinkedIn</h3>
-        <p>Import your professional information from LinkedIn</p>
-        <button onclick="showImportForm('linkedin')" class="retry-button">
+        <p>Import your professional information from LinkedIn (Coming Soon)</p>
+        <button
+          onclick="showImportForm('linkedin')"
+          class="retry-button"
+          disabled
+        >
           Import from LinkedIn
         </button>
         <div id="linkedin-form" class="import-form">
