--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -62,7 +62,7 @@
           <div class="text-center mt-4">
             <p class="mb-0">
               Already have an account?
-              <a href="{% url 'core:login' %}" class="text-primary">Login</a>
+              <a href="{% url 'account_login' %}" class="text-primary">Login</a>
             </p>
           </div>
         </div>
