--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -334,10 +334,10 @@
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'core:login' %}">Login</a>
+              <a class="nav-link" href="{% url 'account_login' %}">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'core:register' %}">Register</a>
+              <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
             </li>
             {% endif %}
           </ul>
